Bug 64754 - CONDITIONAL FORMATTING [Icon set] localization setting for decimal separator is ignored
Summary: CONDITIONAL FORMATTING [Icon set] localization setting for decimal separator ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.3.3 release
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.2.0 target:4.1.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-19 10:05 UTC by Michel Rudelle
Modified: 2013-09-09 04:36 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
3 screen shots showing the lost of the decimal value (72.98 KB, image/jpeg)
2013-05-19 10:05 UTC, Michel Rudelle
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michel Rudelle 2013-05-19 10:05:55 UTC
Created attachment 79514 [details]
3 screen shots showing the lost of the decimal value

Steps to reproduce, using Locale setting: French (France):
(The attached screen shot shows the described sequence)

1/ Select any cell range
2/ Format > Conditional Formatting > All Cells > Icon set
3/ Select "Value" for both thresholds and enter:
	a decimal number in the 1st
	an integer in the 2nd
Correct at this stage => in French locale, decimal separator is a comma (screen shot 1)

4/ Click Ok
5/ Format > Conditional Formatting > Manage > Select previous range > Edit
Incorrect display => decimal separator changed for a point (screen shot 2)

6/ Click Ok
7/ Again: Select previous range > Edit
The decimal value is lost (changed to 0) while the integer is still preserved (screen shot 3)

Version 4.0.3.3 (Build ID: 0eaa50a932c8f2199a615e1eb30f7ac74279539) – Vista 32b

This behaviour is the same as described for bug 60574 related to Color Scale and which is now fixed (what I can confirm)
Comment 1 Jacques Guilleron 2013-05-19 11:14:27 UTC
Hello Michel,

I confirm this behaviour with LO 4.0.2.2 and Windows 7 Home Premium.

Jacques Guilleron
Comment 2 Michel Rudelle 2013-05-19 11:28:24 UTC
Platform changed to All because the bug was also observed on the French lists on Ubuntu
Comment 3 Commit Notification 2013-06-28 22:21:52 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a539cf2c09bdd62d1c4a0124ed536f88d4fd01d5

use the local setting aware method for the UI, fdo#64754



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Michel Rudelle 2013-06-29 12:00:46 UTC
It's OK with today master (master~2013-06-29):
Version: 4.2.0.0.alpha0+ Build ID: 5b9bad7482a98f2d0d37c4b75a13292abe653ea3 [Vista-32b]
Thanks
Comment 5 Commit Notification 2013-07-01 13:30:55 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9b557cfd01131544639285dace81e11ed3c49aa7&h=libreoffice-4-1

use the local setting aware method for the UI, fdo#64754


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Michel Rudelle 2013-07-15 08:47:44 UTC
Hi,
It works fine with:
Version: 4.1.0.2.0 Build ID: 103a942746cfe346e87daab62acbd4268c38097
Vista-32b
Thanks a lot