use the local setting aware method for the UI, fdo#64754

Change-Id: Ie3117c26b347e1a8996ef9cbcb8b0d6ee561b5b3
(cherry picked from commit a539cf2c09bdd62d1c4a0124ed536f88d4fd01d5)